# kg-extract

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  config.example.json  justfile
presets/code/: business_domain_flow.yaml  codebase_graph.yaml
presets/knowledge/: wiki_graph.yaml
scripts/: ladybug-e2e-eval.sh  ladybug-e2e-smoke.sh
scripts/fixtures/: ladybug_eval_doc.md  ladybug_eval_expected.json  ladybug_eval_schema.mock.json  ladybug_eval_simple.mock.txt  medium_product_doc.md  medium_product_expected.json  medium_product_schema.mock.json  medium_product_simple.mock.txt
spec/: 00-glossary.md  01-concept.md  02-data-model.md  03-runtime-model.md  04-interfaces.md  05-conformance.md  06-feature-matrix.md  07-protocol-contract-lock.md  CHANGELOG.md
src/: chunking.rs  citation.rs  community.rs  graph_build.rs  ladybug_export.rs  lib.rs  mcp.rs  mcp_test.rs  merger.rs  parser.rs  protocol.rs
src/backend/: agent_cli.rs  llms_backend.rs  mock.rs  mod.rs  pi_agent.rs  pi_agent_test.rs  sdk_agent.rs
src/extractor/: agentic.rs  mod.rs  schema_json.rs  simple.rs  toolcall.rs  triplex.rs  youtu.rs
src/extractor/agentic/: agentic_test.rs  mod.rs  prompts.rs  schema_filter.rs
src/extractor/simple/: mod.rs  parse.rs  prompts.rs  simple_test.rs
src/parser/: build.rs  decode.rs  mod.rs  tests.rs
src/template/: gallery.rs  mod.rs  model.rs  prompt.rs  tests.rs
src/types/: config.rs  entity.rs  graph.rs  mod.rs  predicate.rs  schema.rs  spec.rs
