[package]
name = "kg-extract"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Multi-strategy knowledge-graph extraction (Simple / Triplex / Youtu), ported from the Python graph.kg_extractor"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "kg-extract"
path = "src/bin/kg-extract.rs"

[features]
default = []
# Pull in the real `llms` crate backend. Without it, only the AgentCli backend
# (subprocess to glmcc/minimaxcc/mimocc) and a Mock backend are available.
llms-backend = ["dep:llms"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.26"
strum_macros = "0.26"
async-trait = "0.1"
anyhow = "1"
thiserror = "1"
regex = "1"
md5 = "0.7"
nanoid = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util"] }
clap = { version = "4", features = ["derive"] }

chonkie = { path = "../chonkie" }
llms = { path = "../llms", optional = true }

[dev-dependencies]
pretty_assertions = "1"
tokio = { version = "1", features = ["rt", "macros"] }
